[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/surfacer/src/gui/pause_button.gd" type="Script" id=5]

[node name="PauseButton" type="Node2D"]
position = Vector2( 3756, 20 )
script = ExtResource( 5 )

[node name="ScaffolderTextureButton" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_key = "pause_circle"
expands_texture = false
texture_scale = Vector2( 4, 4 )
size_override = Vector2( 64, 64 )

[connection signal="pressed" from="ScaffolderTextureButton" to="." method="_on_ScaffolderTextureButton_pressed"]
